k8s/kustomization/overlays/dev/bases/server/server-ingress-web.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: server-ingress-web
  namespace: starter
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`server.local.starter.com`)
      priority: 10
      services:
        - name: server-service
          port: 80
      middlewares:
        - name: https-redirect
